function 2 backend development done: desktop -> mobile file